--- a/about me .html
+++ b/about me .html
@@ -26,7 +26,7 @@
             Developer <span> & Coder </span> <br><br>
             I'm  Rahul Kumar Malik , an Engineering first year Student <br>
             At Army Institute of technology,Pune . I belong to Haryana. <br>
-            Currently i am pursuing my Enggineering degree through my College.<br>
+            Currently i am pursuing my Engineering degree through my College.<br>
             I am a Passionate CP enthusiast and also frontend Web developer, <br>
             right now i am learning programming language and acehive 5 Star <br>
             on Hackerrank In C++ Programming language and also learning web <br>
