--- a/skills.html
+++ b/skills.html
@@ -16,8 +16,7 @@
     
         <i class='bx bx-code-alt' style='color:#059afd'  ></i>
         <h2> Teachnical Skills:-</h2>
-        <p> 
-             1. C++ language <br>
+        <p>   1. C++ language <br>
                3. Html <br>
                 4. CSS <br>
                  5. Editing </p>           
