--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="home-sci">
         <a href="https://www.instagram.com/r_k_malik11?igsh=MTdydG05ZzF5ZHZkcg=="><i class='bx bxl-instagram'></i></a>
         <a href="https://www.linkedin.com/in/rahul-kumar-malik-50b5442a7?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class='bx bxl-linkedin' ></i></a>
-        <a href="#"><i class='bx bxl-whatsapp' ></i></a>
+        <a href="https://web.whatsapp.com/"><i class='bx bxl-whatsapp' ></i></a>
         <a href="#"><i class='bx bxl-telegram' ></i></a>
        </div>
       <a href="about me .html" class="btn-box">More About Me</a>
